Fixed text alignment on AboutMe

--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -21,6 +21,11 @@
 .main--textbox {
     max-width: 900px;
     padding: 0px 10px;
+    
+}
+
+.main--textbox > p {
+    text-align: left;
 }
 
 .main--header > h1 {
